; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_file.c_cifs_uncached_retry_writev.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/cifs/extr_file.c_cifs_uncached_retry_writev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cifs_writedata = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@EAGAIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cifs_writedata*)* @cifs_uncached_retry_writev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cifs_uncached_retry_writev(%struct.cifs_writedata* %0) #0 {
  %2 = alloca %struct.cifs_writedata*, align 8
  %3 = alloca i32, align 4
  store %struct.cifs_writedata* %0, %struct.cifs_writedata** %2, align 8
  br label %4

4:                                                ; preds = %23, %1
  %5 = load %struct.cifs_writedata*, %struct.cifs_writedata** %2, align 8
  %6 = getelementptr inbounds %struct.cifs_writedata, %struct.cifs_writedata* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %20

11:                                               ; preds = %4
  %12 = load %struct.cifs_writedata*, %struct.cifs_writedata** %2, align 8
  %13 = getelementptr inbounds %struct.cifs_writedata, %struct.cifs_writedata* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = call i32 @cifs_reopen_file(%struct.TYPE_2__* %14, i32 0)
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %11
  br label %23

19:                                               ; preds = %11
  br label %20

20:                                               ; preds = %19, %4
  %21 = load %struct.cifs_writedata*, %struct.cifs_writedata** %2, align 8
  %22 = call i32 @cifs_async_writev(%struct.cifs_writedata* %21)
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %20, %18
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @EAGAIN, align 4
  %26 = sub nsw i32 0, %25
  %27 = icmp eq i32 %24, %26
  br i1 %27, label %4, label %28

28:                                               ; preds = %23
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @cifs_reopen_file(%struct.TYPE_2__*, i32) #1

declare dso_local i32 @cifs_async_writev(%struct.cifs_writedata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
